--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -17,8 +17,10 @@ header {
 .header_group {
     display: flex;
     max-width: 1400px;
-    margin: auto;
-    padding: 20px 0;
+    margin: auto ;
+    padding:20px 0 10px 0;
+    
+   
 
     justify-content: space-between;
 }
@@ -35,15 +37,18 @@ header {
 }
 .header_group_right {
     display: flex;
+   
     margin: 0 20px 0 0;
 }
 .head_item {
     display: flex;
-    align-items: flex-end;
+    // align-items: flex-end;
     list-style: none;
+    margin: 10px 30px 0 0  ;
+    padding: 0;
 
     li {
-        margin: 10px 30px;
+        margin: 10px 20px;
         text-align: center;
         h6 {
             margin: 0;
@@ -59,8 +64,9 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-around;
+   
 
-    margin: 0 0 0 60px;
+    // margin: 0 0 0 20px;
 
     // div {
     //     margin: 0 10px 0 0;
@@ -71,22 +77,44 @@ header {
     height: 35px;
     width: 35px;
     margin: 0 10px 0 0;
-    img {
-        max-width: 100%;
-        max-height: 100%;
-    }
+    // img {
+    //     max-width: 100%;
+    //     max-height: 100%;
+    // }
 }
 
 .language {
-    position: absolute;
+    position:absolute;
     top: 8px;
-    margin: 0px;
+    min-width: 100px;
+    // margin: 0px;
 }
 
-.nav_rwd {
+
+
+// 漢堡
+#burger {
     display: none;
-    margin: auto 0px auto 10px;
 }
+
+.nav_mune {
+    display: none;
+ 
+   
+
+}
+
+label {
+    width: 35px;
+    height: 35px;
+    display: none;
+    img{
+        width: 100%;
+        height: 100%;
+
+    }
+}
+
 /* header_hover */
 .head_item :hover {
     color: rgb(0, 107, 184);
@@ -97,14 +125,8 @@ header {
 
 #nav_none {
     display: none;
-    position: absolute;
-    background-color: gainsboro;
-    width: 100vw;
-    text-align: center;
-    list-style: none;
-    h6 {
-        margin: 50px 0;
-    }
+   
+   
 }
 
 /* footer */
@@ -173,30 +195,66 @@ footer {
 }
 
 /* footer_rwd  */
-@media (max-width: 1050px), print {
+@media (max-width: 1024px), print {
     // header_rwd
+    .header_group{
+        padding:15px 0 5px 0;
+    }
+    .language {
+        // right: -7px;
+        top: 10px;
+        // margin: auto ;
+    }
     .head_item {
         display: none;
+       
     }
 
-    .header_community {
-        align-items: center;
-        display: flex;
+    .header_group_right{
+        label{ 
+            // margin: auto;
+            position: relative;
+            top:30px;
+        
+        }
+       
     }
+
+   
 
     .community_icon {
         display: none;
     }
+    
 
-    .nav_rwd {
+    
+   
+    // 漢堡
+    .nav_mune {
+        
+        background-color: gainsboro;
+        max-width: 100vw;
+        text-align: center;
+        list-style: none;
+        padding: 20px 0 ;
+        h6 {
+            // margin: 50px 0;
+            padding: 20px 0;
+         }  
+       top: -100%;
+       transition: 1s;
+    }
+
+
+
+    label {
         display: block;
-        height: 40px;
-        width: 40px;
+    }
 
-        img {
-            max-width: 100%;
-            max-height: 100%;
-        }
+    #burger:checked + .mnue .nav_mune {
+        display: block;
+        top: 0;
+        
     }
 
     
@@ -208,7 +266,7 @@ footer {
     }
 }
 
-@media (max-width: 600px), print {
+@media (max-width: 768px), print {
     .header_group {
         padding: 10px 0;
     }
@@ -218,8 +276,18 @@ footer {
         margin: 0 0 0 15px;
     }
     .language {
-        right: 68px;
+        right: 45px;
         top: 28px;
+       
+    }
+    
+    .header_group_right{
+        label{ 
+           
+            top:15px;
+        
+        }
+       
     }
 
     .footer_group {
@@ -228,7 +296,7 @@ footer {
 
         padding: 30px 0;
         div {
-            margin: 20px auto;
+            margin: 15px auto;
             img {
                 margin: 0;
             }
