--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -233,7 +233,7 @@ footer {
     .nav_mune {
         
         background-color: gainsboro;
-        max-width: 100vw;
+        // max-width: 100vw;
         text-align: center;
         list-style: none;
         padding: 20px 0 ;
@@ -241,8 +241,7 @@ footer {
             // margin: 50px 0;
             padding: 20px 0;
          }  
-       top: -100%;
-       transition: 1s;
+
     }
 
 
@@ -253,7 +252,7 @@ footer {
 
     #burger:checked + .mnue .nav_mune {
         display: block;
-        top: 0;
+     
         
     }
 
