--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -1,7 +1,9 @@
 /* Share */
+ 
 
 body {
     font-family: "Noto Sans TC", sans-serif;
+    width: 100vw;
 }
 
 a {
@@ -11,7 +13,7 @@ a {
 
 /* header */
 header {
-    width: 100vw;
+    // width: 100vw;
     box-shadow: 0px 1px 5px grey;
 }
 .header_group {
@@ -38,7 +40,7 @@ header {
 .header_group_right {
     display: flex;
    
-    margin: 0 20px 0 0;
+    // margin: 0 20px 0 0;
 }
 .head_item {
     display: flex;
@@ -132,7 +134,7 @@ label {
 /* footer */
 footer {
     box-shadow: 0px -1px 5px grey;
-    width: 100vw;
+    // width: 100vw;
 }
 
 .footer_group {
