--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -1,7 +1,6 @@
 /* Share */
 body {
   font-family: "Noto Sans TC", sans-serif;
-  width: 100vw;
 }
 
 a {
@@ -11,6 +10,7 @@ a {
 
 /* header */
 header {
+  width: 100vw;
   -webkit-box-shadow: 0px 1px 5px grey;
           box-shadow: 0px 1px 5px grey;
 }
@@ -21,17 +21,17 @@ header {
   display: flex;
   max-width: 1400px;
   margin: auto;
-  padding: 20px 0 10px 0;
+  padding: 15px 0;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
 .logo {
-  height: 80px;
+  height: 70px;
   width: 300px;
-  justify-items: center;
   margin: 0 0 0 60px;
+  line-height: 70px;
 }
 
 .logo img {
@@ -43,6 +43,8 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .head_item {
@@ -50,7 +52,7 @@ header {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
-  margin: 10px 30px 0 0;
+  margin: 0px 30px 0 0;
   padding: 0;
 }
 
@@ -86,17 +88,16 @@ header {
 }
 
 .language {
-  position: absolute;
-  top: 8px;
-  min-width: 100px;
+  text-align: end;
+  padding: 0 10px;
 }
 
-#burger {
-  display: none;
+.language p {
+  margin: 0;
 }
 
-.nav_mune {
-  display: none;
+main {
+  width: 100vw;
 }
 
 label {
@@ -108,6 +109,14 @@ label {
 label img {
   width: 100%;
   height: 100%;
+}
+
+.nav_mune {
+  display: none;
+}
+
+#burger {
+  display: none;
 }
 
 /* header_hover */
@@ -126,6 +135,7 @@ label img {
 footer {
   -webkit-box-shadow: 0px -1px 5px grey;
           box-shadow: 0px -1px 5px grey;
+  width: 100vw;
 }
 
 .footer_group {
@@ -195,17 +205,22 @@ footer {
 /* footer_rwd  */
 @media (max-width: 1024px), print {
   .header_group {
-    padding: 15px 0 5px 0;
+    padding: 10px 0 15px 0;
   }
   .language {
-    top: 10px;
+    right: 7px;
+    top: -25px;
+  }
+  .logo {
+    line-height: 30px;
   }
   .head_item {
     display: none;
   }
   .header_group_right label {
     position: relative;
-    top: 30px;
+    top: 10px;
+    display: block;
   }
   .community_icon {
     display: none;
@@ -218,9 +233,6 @@ footer {
   }
   .nav_mune h6 {
     padding: 20px 0;
-  }
-  label {
-    display: block;
   }
   #burger:checked + .mnue .nav_mune {
     display: block;
@@ -242,11 +254,12 @@ footer {
     margin: 0 0 0 15px;
   }
   .language {
-    right: 45px;
-    top: 28px;
+    position: relative;
+    right: 70px;
+    top: 18px;
   }
   .header_group_right label {
-    top: 15px;
+    top: -10px;
   }
   .footer_group {
     display: -webkit-box;
