--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -1,5 +1,4 @@
 /* Share */
- 
 
 body {
     font-family: "Noto Sans TC", sans-serif;
@@ -13,17 +12,17 @@ a {
 
 /* header */
 header {
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
+
     box-shadow: 0px 1px 5px grey;
+    background-color: white;
 }
 .header_group {
     display: flex;
     max-width: 1400px;
-    margin: auto ;
-    padding:15px 0 ;
-    
-    
-   
+    margin: auto;
+    padding: 15px 0;
 
     justify-content: space-between;
 }
@@ -33,34 +32,47 @@ header {
     // justify-items: center;
     margin: 0 0 0 60px;
     // text-align:center;
-    line-height:70px;
+    line-height: 70px;
 
     img {
         max-width: 100%;
         max-height: 100%;
     }
 }
+.burger_group {
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+}
+.language {
+    text-align: end;
+    padding: 0 10px;
+    p {
+        margin: 0;
+    }
+}
 .header_group_right {
     display: flex;
     justify-content: space-around;
     // margin: 0 20px 0 0;
-}
-.head_item {
-    display: flex;
-    // align-items: flex-end;
-    list-style: none;
-    margin: 0px 30px 0 0  ;
-    padding: 0;
 
-    li {
-        margin: 10px 20px;
-        text-align: center;
-        h6 {
-            margin: 0;
-        }
-        p {
-            margin: 0;
-            font-size: 11pt;
+    ul {
+        display: flex;
+        // align-items: flex-end;
+        list-style: none;
+        margin: 0px 30px 0 0;
+        padding: 0;
+
+        li {
+            margin: 10px 20px;
+            text-align: center;
+            h6 {
+                margin: 0;
+            }
+            p {
+                margin: 0;
+                font-size: 11pt;
+            }
         }
     }
 }
@@ -69,7 +81,6 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-around;
-   
 
     // margin: 0 0 0 20px;
 
@@ -82,71 +93,38 @@ header {
     height: 35px;
     width: 35px;
     margin: 0 10px 0 0;
-    // img {
-    //     max-width: 100%;
-    //     max-height: 100%;
-    // }
 }
-
-.language {
-   text-align: end;
-   padding: 0 10px;
-   p{
-       margin: 0;
-   }
-    
-    // position:relative;
-    // top: -30px;
-    // right: 100px;
-
-    // min-width: 100px;
-    // margin: 0px;
-}
-
-main{width: 100vw;}
 
 // 漢堡
 label {
     width: 35px;
     height: 35px;
     display: none;
-    img{
+    img {
         width: 100%;
         height: 100%;
-
     }
 }
-.nav_mune {
+.mnue ul {
     display: none;
- 
-   
-
 }
 #burger {
     display: none;
 }
 
-
-
-
 /* header_hover */
-.head_item :hover {
+.header_group_right ul :hover {
     color: rgb(0, 107, 184);
     box-shadow: 1 1 0;
 }
 
 /* main */
 
-#nav_none {
-    display: none;
-   
-   
-}
-
 /* footer */
 footer {
     box-shadow: 0px -1px 5px grey;
-    width: 100vw;
+    // width: 100vw;
+    // width: 100%;
 }
 
 .footer_group {
@@ -166,9 +144,11 @@ footer {
         margin: 0 0 0 10px;
     }
 }
-.footer_item {
+.footer_item ul {
     text-align: center;
     font-size: 11pt;
+    list-style: none;
+    // margin: 0;padding: 0;
 }
 .footer_community {
     margin: 0 25px 0 0;
@@ -184,17 +164,16 @@ footer {
     display: flex;
     justify-content: space-around;
     padding: 0 5px;
-  
+
     div {
         height: 35px;
         width: 35px;
-        
+
         img {
             max-width: 100%;
             max-height: 100%;
         }
     }
-
 }
 .footer_end {
     background-color: black;
@@ -211,77 +190,74 @@ footer {
 /* footer_rwd  */
 @media (max-width: 1024px), print {
     // header_rwd
-    .header_group{
-        padding:10px 0 15px 0 ;
+    header {
+        position: absolute;
+        z-index: 1;
     }
-    .language {
-        right: 7px;
-        top: -25px;
-        
-       
-        // top: 10px;
-        // margin: auto ;
-    }
-    .logo{
-        line-height:30px;
-    }
-    .head_item {
-        display: none;
-       
+    .header_group {
+        padding: 10px 0 15px 0;
     }
 
-    .header_group_right{
-        label{ 
+    .logo {
+        line-height: 30px;
+    }
+
+    .language {
+        // right: 7px;
+        top: -25px;
+    }
+    .header_group_right {
+        ul {
+            display: none;
+        }
+        label {
             // margin: auto;
             position: relative;
-            top:10px; 
-             display: block;
-        
+            top: 10px;
+            display: block;
         }
-       
     }
-
-   
 
     .community_icon {
         display: none;
     }
-    
 
-    
-   
     // 漢堡
-    .nav_mune {
-        
-        background-color: gainsboro;
-        // max-width: 100vw;
-        text-align: center;
-        list-style: none;
-        padding: 20px 0 ;
-        h6 {
-            // margin: 50px 0;
-            padding: 20px 0;
-         }  
+    .mnue {
+        ul {
+            background-color: gainsboro;
 
-    }
+            text-align: center;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            // padding: 20px 0 ;
 
+            h6 {
+                // margin: 50px 0;
+                margin: 0;
 
-
-  
-
-    #burger:checked + .mnue .nav_mune {
-        display: block;
-     
-        
+                border-bottom: solid 2px rgb(189, 189, 189);
+                margin: 0 auto;
+                padding: 30px 0;
+            }
+            display: block;
+            position: absolute;
+            width: 100%;
+            top: -100%;
+            transition: 0.5s;
+        }
     }
 
     
-    // footer_rwd
-    .footer_logo img {
-        max-width: 100%;
-        max-height: 100%;
-        margin: 0 0 0 10px;
+
+    #burger:checked + .mnue ul {
+        display: block;
+        top: 85px;
     }
+
+    // footer_rwd
+    
 }
 
 @media (max-width: 768px), print {
@@ -297,17 +273,13 @@ footer {
         position: relative;
         right: 50px;
         top: 18px;
-       
     }
-    
-    .header_group_right{
-        label{ 
-           
-            top:-10px;
+
+    .header_group_right {
+        label {
+            top: -10px;
             right: -18px;
-        
         }
-       
     }
 
     .footer_group {
