--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -116,6 +116,7 @@ label {
 .header_group_right ul :hover {
     color: rgb(0, 107, 184);
     box-shadow: 1 1 0;
+    transition: .3s;
 }
 
 /* main */
@@ -193,6 +194,7 @@ footer {
     header {
         position: absolute;
         z-index: 1;
+
     }
     .header_group {
         padding: 10px 0 15px 0;
@@ -237,7 +239,7 @@ footer {
                 // margin: 50px 0;
                 margin: 0;
 
-                border-bottom: solid 2px rgb(189, 189, 189);
+                // border-bottom: solid 2px rgb(189, 189, 189);
                 margin: 0 auto;
                 padding: 30px 0;
             }
@@ -253,7 +255,7 @@ footer {
 
     #burger:checked + .mnue ul {
         display: block;
-        top: 85px;
+        top: 95px;
     }
 
     // footer_rwd
