--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -47,6 +47,10 @@ header {
 .language {
     text-align: end;
     padding: 0 10px;
+    // 暫時隱藏
+    // visibility: hidden;
+    // 暫時隱藏結束
+
     p {
         margin: 0;
     }
@@ -90,9 +94,13 @@ header {
 }
 
 .community_icon {
-    height: 35px;
-    width: 35px;
+    // height: 35px;
+    // width: 35px;
     margin: 0 10px 0 0;
+    img {
+        height: 35px;
+        width: 35px;
+    }
 }
 
 // 漢堡
@@ -116,7 +124,7 @@ label {
 .header_group_right ul :hover {
     color: rgb(0, 107, 184);
     box-shadow: 1 1 0;
-    transition: .3s;
+    transition: 0.3s;
 }
 
 /* main */
@@ -137,11 +145,13 @@ footer {
 }
 
 .footer_logo {
-    height: 130px;
-    width: 200px;
+    // height: 130px;
+    // width: 200px;
     img {
-        max-width: 100%;
-        max-height: 100%;
+        // max-width: 100%;
+        // max-height: 100%;
+        height: 130px;
+        width: 200px;
         margin: 0 0 0 10px;
     }
 }
@@ -167,12 +177,14 @@ footer {
     padding: 0 5px;
 
     div {
-        height: 35px;
-        width: 35px;
+        // height: 35px;
+        // width: 35px;
 
         img {
-            max-width: 100%;
-            max-height: 100%;
+            // max-width: 100%;
+            // max-height: 100%;
+            height: 35px;
+            width: 35px;
         }
     }
 }
@@ -194,7 +206,6 @@ footer {
     header {
         position: absolute;
         z-index: 1;
-
     }
     .header_group {
         padding: 10px 0 15px 0;
@@ -251,19 +262,15 @@ footer {
         }
     }
 
-    
-
     #burger:checked + .mnue ul {
         display: block;
         top: 95px;
     }
 
     // footer_rwd
-    
 }
 
 @media (max-width: 768px), print {
-   
     .logo {
         height: 65px;
         width: 80px;
@@ -276,9 +283,8 @@ footer {
     }
 
     .header_group {
-        padding:15px 0;
+        padding: 15px 0;
     }
-
 
     .header_group_right {
         label {
@@ -286,8 +292,6 @@ footer {
             right: -18px;
         }
     }
-
-    
 
     .footer_group {
         display: flex;
@@ -314,4 +318,3 @@ footer {
 
     // }
 }
-
