--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -268,7 +268,13 @@ footer {
     }
 
     // footer_rwd
+    
+main{
+    padding-top: 95px;
+     
+ }
 }
+
 
 @media (max-width: 768px), print {
     .logo {
