--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -17,6 +17,7 @@ header {
 
     box-shadow: 0px 1px 5px grey;
     background-color: white;
+
 }
 .header_group {
     display: flex;
@@ -257,13 +258,13 @@ footer {
             display: block;
             position: absolute;
             width: 100%;
-            top: -100%;
+            top: -400px;
             transition: 0.5s;
         }
     }
 
     #burger:checked + .mnue ul {
-        display: block;
+        // display: block;
         top: 95px;
     }
 
@@ -276,7 +277,7 @@ main{
 }
 
 
-@media (max-width: 768px), print {
+@media (max-width: 720px), print {
     .logo {
         height: 65px;
         width: 80px;
