--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -8,7 +8,8 @@ a {
   color: black;
 }
 
-ol, ul {
+ol,
+ul {
   padding: 0;
 }
 
@@ -106,11 +107,11 @@ header {
       justify-content: space-around;
 }
 
-.community_icon {
+.header_community div {
   margin: 0 10px 0 0;
 }
 
-.community_icon img {
+.header_community div img {
   height: 35px;
   width: 35px;
 }
@@ -162,9 +163,14 @@ footer {
           justify-content: space-between;
 }
 
+.footer_logo {
+  max-height: 130px;
+  max-width: 200px;
+}
+
 .footer_logo img {
-  height: 130px;
-  width: 200px;
+  width: 100%;
+  height: 100%;
   margin: 0 0 0 10px;
 }
 
@@ -187,9 +193,14 @@ footer {
   padding: 0 5px;
 }
 
+.footer_community_icon div {
+  max-height: 35px;
+  max-width: 35px;
+}
+
 .footer_community_icon div img {
-  height: 35px;
-  width: 35px;
+  width: 100%;
+  height: 100%;
 }
 
 .footer_end {
@@ -228,7 +239,7 @@ footer {
     top: 10px;
     display: block;
   }
-  .community_icon {
+  .header_community div {
     display: none;
   }
   .mnue ul {
