--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -10,7 +10,8 @@ a {
     color: black;
 }
 
-ol, ul{
+ol,
+ul {
     padding: 0;
 }
 
@@ -21,7 +22,6 @@ header {
 
     box-shadow: 0px 1px 5px grey;
     background-color: white;
-
 }
 .header_group {
     display: flex;
@@ -90,22 +90,19 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-around;
+    div {
+        margin: 0 10px 0 0;
+        img {
+            height: 35px;
+            width: 35px;
+        }
+    }
 
     // margin: 0 0 0 20px;
 
     // div {
     //     margin: 0 10px 0 0;
     // }
-}
-
-.community_icon {
-    // height: 35px;
-    // width: 35px;
-    margin: 0 10px 0 0;
-    img {
-        height: 35px;
-        width: 35px;
-    }
 }
 
 // 漢堡
@@ -152,11 +149,12 @@ footer {
 .footer_logo {
     // height: 130px;
     // width: 200px;
+    max-height: 130px;
+    max-width: 200px;
     img {
-        // max-width: 100%;
-        // max-height: 100%;
-        height: 130px;
-        width: 200px;
+        width: 100%;
+        height: 100%;
+
         margin: 0 0 0 10px;
     }
 }
@@ -182,14 +180,16 @@ footer {
     padding: 0 5px;
 
     div {
-        // height: 35px;
-        // width: 35px;
+        max-height: 35px;
+        max-width: 35px;
 
         img {
+            width: 100%;
+            height: 100%;
             // max-width: 100%;
             // max-height: 100%;
-            height: 35px;
-            width: 35px;
+            // height: 35px;
+            // width: 35px;
         }
     }
 }
@@ -236,9 +236,13 @@ footer {
         }
     }
 
-    .community_icon {
-        display: none;
+    .header_community{
+        div{
+             display: none;
+        }
     }
+
+    
 
     // 漢堡
     .mnue {
@@ -273,13 +277,11 @@ footer {
     }
 
     // footer_rwd
-    
-main{
-    padding-top: 95px;
-     
- }
-}
 
+    main {
+        padding-top: 95px;
+    }
+}
 
 @media (max-width: 720px), print {
     .logo {
