--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -236,13 +236,11 @@ footer {
         }
     }
 
-    .header_community{
-        div{
-             display: none;
+    .header_community {
+        div {
+            display: none;
         }
     }
-
-    
 
     // 漢堡
     .mnue {
@@ -309,19 +307,36 @@ footer {
     .footer_group {
         display: flex;
         flex-direction: column;
+        align-items: center;
 
         padding: 30px 0;
-        div {
-            margin: 15px auto;
-            img {
+        // div {
+        //     margin: 15px auto;
+        //     img {
+        //         margin: 0;
+        //     }
+        //     div {
+        //         margin: 0px auto;
+        //     }
+        //     P {
+        //         margin: 10px auto;
+        //     }
+        // }
+        .footer_logo  {
+            margin-bottom: 30px;
+            img{
                 margin: 0;
             }
-            div {
-                margin: 0px auto;
-            }
-            P {
-                margin: 10px auto;
-            }
+            
+        }
+        ul{
+            margin-bottom: 30px;
+            text-align: center;
+        }
+
+        .footer_community {
+            margin: 0;
+            margin-bottom: 30px;
         }
     }
 
