--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -309,7 +309,8 @@ footer {
         flex-direction: column;
         align-items: center;
 
-        padding: 30px 0;
+        // padding: 30px 0;
+       
         // div {
         //     margin: 15px auto;
         //     img {
