--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -194,8 +194,8 @@ footer {
 }
 
 .footer_community_icon div {
-  max-height: 35px;
-  max-width: 35px;
+  height: 35px;
+  width: 35px;
 }
 
 .footer_community_icon div img {
