--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -180,8 +180,8 @@ footer {
     padding: 0 5px;
 
     div {
-        max-height: 35px;
-        max-width: 35px;
+        height: 35px;
+        width: 35px;
 
         img {
             width: 100%;
