--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -97,23 +97,21 @@ header {
 }
 
 .header_community {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header_community div {
-  margin: 0 10px 0 0;
+  margin: 0 15px 0 0;
 }
 
 .header_community div img {
-  height: 35px;
-  width: 35px;
+  height: 38px;
+  width: 38px;
 }
 
 label {
@@ -188,14 +186,15 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 0 5px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 10px;
 }
 
 .footer_community_icon div {
-  height: 35px;
-  width: 35px;
+  height: 38px;
+  width: 38px;
 }
 
 .footer_community_icon div img {
