--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -161,6 +161,12 @@ footer {
           justify-content: space-between;
 }
 
+.footer_group ul {
+  text-align: center;
+  font-size: 11pt;
+  list-style: none;
+}
+
 .footer_logo {
   max-height: 130px;
   max-width: 200px;
@@ -170,12 +176,6 @@ footer {
   width: 100%;
   height: 100%;
   margin: 0 0 0 10px;
-}
-
-.footer_item ul {
-  text-align: center;
-  font-size: 11pt;
-  list-style: none;
 }
 
 .footer_community {
