--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -144,6 +144,13 @@ footer {
     margin: auto;
     padding: 30px 0;
     justify-content: space-between;
+
+    ul{
+        text-align: center;
+        font-size: 11pt;
+        list-style: none;
+
+    }
 }
 
 .footer_logo {
@@ -158,12 +165,12 @@ footer {
         margin: 0 0 0 10px;
     }
 }
-.footer_item ul {
-    text-align: center;
-    font-size: 11pt;
-    list-style: none;
-    // margin: 0;padding: 0;
-}
+// .footer_item ul {
+//     text-align: center;
+//     font-size: 11pt;
+//     list-style: none;
+//     // margin: 0;padding: 0;
+// }
 .footer_community {
     margin: 0 25px 0 0;
     // div {
