--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -13,6 +13,7 @@ a {
 ol,
 ul {
     padding: 0;
+    margin: 0;
 }
 
 /* header */
@@ -149,6 +150,7 @@ footer {
         text-align: center;
         font-size: 11pt;
         list-style: none;
+        
 
     }
 }
