--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -1,11 +1,12 @@
 /* Share */
 body {
   font-family: "Noto Sans TC", sans-serif;
+  background-color: #fcfcfc;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #236960;
 }
 
 ol,
@@ -16,10 +17,10 @@ ul {
 
 /* header */
 header {
+  background-color: #9de4a3;
   width: 100%;
   -webkit-box-shadow: 0px 1px 5px grey;
           box-shadow: 0px 1px 5px grey;
-  background-color: white;
 }
 
 .header_group {
@@ -202,8 +203,8 @@ footer {
 }
 
 .footer_end {
-  background-color: black;
-  color: white;
+  background-color: #9de4a3;
+  color: #236960;
   text-align: center;
   padding: 30px 0;
   font-size: 10pt;
