--- a/CSS/style_header&footer.scss
+++ b/CSS/style_header&footer.scss
@@ -3,11 +3,15 @@
 body {
     font-family: "Noto Sans TC", sans-serif;
     // width: 100vw;
+    // width: 100%;
+    background-color: rgb(252, 252, 252) ;
+   
 }
 
 a {
     text-decoration: none;
-    color: black;
+    // color: black;
+    color: rgb(35, 105, 96);
 }
 
 ol,
@@ -19,10 +23,12 @@ ul {
 /* header */
 header {
     // width: 100vw;
+    // background-color: white;
+    background-color: rgb(157, 228, 163);
     width: 100%;
 
     box-shadow: 0px 1px 5px grey;
-    background-color: white;
+    
 }
 .header_group {
     display: flex;
@@ -33,27 +39,33 @@ header {
     justify-content: space-between;
 }
 .logo {
-    height: 70px;
-    width: 300px;
+    // max-height: 70px;
+    // width: 300px;
     // justify-items: center;
-    margin: 0 0 0 60px;
+    // margin: 0 0 0 60px;
     // text-align:center;
     line-height: 70px;
+    // 更改LOGO
+    margin: 4px 0 0 63px;
+   width: 400px;
+    // 更改結束
 
     img {
         max-width: 100%;
         max-height: 100%;
+       
     }
 }
 .burger_group {
     display: flex;
     flex-direction: column;
-    margin: 0 20px;
+    // margin: 0 20px;
 }
 .language {
     text-align: end;
     padding: 0 10px;
     // 暫時隱藏
+    // display: none;
     // visibility: hidden;
     // 暫時隱藏結束
 
@@ -155,11 +167,12 @@ footer {
     }
 }
 
+
 .footer_logo {
     // height: 130px;
     // width: 200px;
     max-height: 130px;
-    max-width: 200px;
+    max-width: 250px;
     img {
         width: 100%;
         height: 100%;
@@ -203,8 +216,10 @@ footer {
     }
 }
 .footer_end {
-    background-color: black;
-    color: white;
+    // background-color: black;
+    background-color: rgb(157, 228, 163);
+    // color: white;
+    color: rgb(35, 105, 96);
     text-align: center;
     padding: 30px 0;
     font-size: 10pt;
@@ -215,7 +230,7 @@ footer {
 }
 
 /* footer_rwd  */
-@media (max-width: 1024px), print {
+@media (max-width: 1050px), print {
     // header_rwd
     header {
         position: absolute;
@@ -226,11 +241,13 @@ footer {
     }
 
     .logo {
+        width: 143px;
         line-height: 30px;
+        margin: 5px 0 0 22px;
     }
 
     .language {
-        // right: 7px;
+        right: 7px;
         top: -25px;
     }
     .header_group_right {
@@ -293,11 +310,11 @@ footer {
 }
 
 @media (max-width: 720px), print {
-    .logo {
-        height: 65px;
-        width: 80px;
-        margin: 0 0 0 15px;
-    }
+    // .logo {
+    //     height: 65px;
+    //     width: 80px;
+    //     margin: 0 0 0 15px;
+    // }
     .language {
         position: relative;
         right: 50px;
@@ -335,7 +352,7 @@ footer {
         //     }
         // }
         .footer_logo  {
-            margin-bottom: 30px;
+            margin-bottom: 55px;
             img{
                 margin: 0;
             }
