--- a/CSS/style_header&footer.css
+++ b/CSS/style_header&footer.css
@@ -2,6 +2,14 @@
 body {
   font-family: "Noto Sans TC", sans-serif;
   background-color: #fcfcfc;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 a {
@@ -123,6 +131,12 @@ label {
 label img {
   width: 100%;
   height: 100%;
+}
+
+main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .mnue ul {
